--- a/CSS - Files/Main_Page.css
+++ b/CSS - Files/Main_Page.css
@@ -17,37 +17,55 @@ body {
     display: flex;
     align-items: center;
 }
+
 .blue_panel .types {
     flex: 1;
     display: flex;
     justify-content: center;
-    padding-left: 10rem;
+    padding-left: 20.8rem;
+    align-items: center;
+    gap: 0.94rem;
+}
+
+.buttons {
+    display: flex;
     align-items: center;
 }
+
 .logo_dungeon_goodies {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     background: url("../Photos_DG/Dungeon_goodies.png") center center no-repeat;
     cursor: pointer;
     text-decoration: none;
     border-radius: 4px;
     display: inline-block;
 }
+
 .logo_dungeon_goodies:hover {
     opacity: 0.9;
 }
+
 .products {
     color: #000;
-    font-weight: 800;
+    font-weight: 780;
     text-decoration: none;
-    padding: 0.5rem 1rem;
+    padding-right: 1px;
     border-radius: 8px;
 }
+
+.link_type.products:hover {
+    opacity: 0.8;
+}
+
 .link_type.sales {
     color: #b91d1d;
     font-weight: 800;
     text-decoration: none;
+
+    padding-right: 161px;
 }
+
 .link_type.sales:hover {
     color: #cd1515;
 }
