Fixed Blue Panel scaling on Main_Page.css

--- a/CSS - Files/Main_Page.css
+++ b/CSS - Files/Main_Page.css
@@ -427,4 +427,10 @@ footer {
         min-width: 125px;
         height: 50px;
     }
+    .link_type.sales{
+        padding: 0.5rem 1rem;
+    }
+    .link_type.products{
+        padding: 0.5rem 1rem;
+    }
 }
