--- a/CSS - Files/SignIn_Register.css
+++ b/CSS - Files/SignIn_Register.css
@@ -154,7 +154,7 @@ footer {
 }
 
 /* --- Other Settings --- */
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .main_window h1 {
         font-size: 2.5rem;
     }
@@ -165,6 +165,7 @@ footer {
         gap: 0.5rem;
         align-items: flex-start;
         font-size: 12px;
+        width: 600px;
     }
     .auth-wrapper{
         padding: 20px 12px;
