--- a/public/css/Add_New_Product.css
+++ b/public/css/Add_New_Product.css
@@ -214,7 +214,7 @@ footer {
 .logo_dungeon_goodies {
     width: 40px;
     height: 40px;
-    background: url("../Photos_DG/Dungeon_goodies.png") center center no-repeat;
+    background: url("../Dungeon_goodies.png") center center no-repeat;
     cursor: pointer;
     text-decoration: none;
     border-radius: 4px;
