--- a/public/css/Remove_Product_Page.css
+++ b/public/css/Remove_Product_Page.css
@@ -7,12 +7,6 @@
 body {
     font-family: Arial, sans-serif;
     color: #333;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-main {
-    flex: 1;
 }
 
 /* --- Blue Panel --- */
@@ -44,43 +38,69 @@ main {
 }
 
 /* --- Main --- */
-.search_part {
+.container {
+    text-align: center;
+    margin: 50px auto;
+    padding: 50px;
+}
+h1 {
+    font-size: 2.5em;
+    margin-bottom: 45px;
+}
+.remover {
     display: flex;
-    justify-content: center;
-    margin: 2rem 0 5rem 0;
-    gap: 0.5rem;
-}
-.searcher {
-    padding: 0.5rem 1rem;
-    border-radius: 20px;
-    border: 1px solid #ccc;
-    width: 250px;
-    outline: none;
-}
-.search_btn {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 1.2rem;
-}
-.users_table {
-    max-width: 800px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-}
-.user_info {
-    display: grid;
-    grid-template-columns: 1fr 2fr 3fr 2fr;
-    padding: 0.75rem 1rem;
-    background-color: #f0f0f0;
-    border-radius: 8px;
-    font-weight: 500;
-}
-.user_info.header {
     font-weight: bold;
+    font-size: 18px;
+    flex-direction: column;
+    gap: 10px;
+}
+.edit_product {
+    display: flex;
+    font-weight: bold;
+    font-size: 18px;
+    flex-direction: column;
+    gap: 10px;
+}
+.h1{
+    margin-bottom: 20px;
+}
+.remove_btn {
+    background-color: #f0f0f0;
+    padding: 15px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: left;
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: background 0.3s;
+    border: 2px solid #ebebeb;
+}
+.remove_btn:hover {
+    background-color: #da7070;
+    border: 2px solid #da7070;
+}
+.edit_btn {
+    background-color: #f0f0f0;
+    padding: 15px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: left;
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: background 0.3s;
+    border: 2px solid #ebebeb;
+}
+.edit_btn:hover {
     background-color: #e0e0e0;
+    border: 2px solid #e0e0e0;
 }
 
 /* --- Footer --- */
@@ -99,7 +119,7 @@ footer {
 .logo_dungeon_goodies {
     width: 40px;
     height: 40px;
-    background: url("../Photos_DG/Dungeon_goodies.png") center center no-repeat;
+    background: url("../Dungeon_goodies.png") center center no-repeat;
     cursor: pointer;
     text-decoration: none;
     border-radius: 4px;
