--- a/public/css/Main_Page.css
+++ b/public/css/Main_Page.css
@@ -140,6 +140,16 @@ body {
     opacity: 0.9;
 }
 
+.btn.favourite {
+    background-color: #d793d5;
+    color: #FFFFFF;
+    padding: 0.5rem 0.8rem;
+}
+
+.btn.favourite:hover {
+    opacity: 0.9;
+}
+
 /* --- Main Window --- */
 .main_window {
     position: relative;
@@ -420,7 +430,7 @@ footer {
     .btn.sign_in {
         padding: 0.5rem 0.5rem;
     }
-    .btn.register {
+    .btn.register, .btn.favourite {
         padding: 0.5rem 0.8rem;
     }
     .scroller_items .item {
@@ -457,7 +467,8 @@ footer {
     }
 
     .btn.sign_in,
-    .btn.register {
+    .btn.register,
+    .btn.favourite {
         padding: 0.3rem 0.6rem;
         font-size: 12px;
     }
