--- a/public/css/Payment.css
+++ b/public/css/Payment.css
@@ -121,6 +121,15 @@ footer {
 .btn.register:hover {
     opacity: 0.9;
 }
+.btn.favourite {
+    background-color: #d793d5;
+    color: #FFFFFF;
+    padding: 0.5rem 0.8rem;
+}
+
+.btn.favourite:hover {
+    opacity: 0.9;
+}
 
 /* --- Bottom Panel --- */
 footer {
@@ -297,7 +306,7 @@ footer {
     .btn.sign_in {
         padding: 0.5rem 0.5rem;
     }
-    .btn.register {
+    .btn.register, .btn.favourite {
         padding: 0.5rem 0.8rem;
     }
     .cart_product {
