--- a/public/css/Product_Detail.css
+++ b/public/css/Product_Detail.css
@@ -122,6 +122,16 @@ body {
     opacity: 0.9;
 }
 
+.btn.favourite {
+    background-color: #d793d5;
+    color: #FFFFFF;
+    padding: 0.5rem 0.8rem;
+}
+
+.btn.favourite:hover {
+    opacity: 0.9;
+}
+
 /* --- Main --- */
 .container {
     max-width: 900px;
@@ -454,7 +464,7 @@ footer {
     .btn.sign_in {
         padding: 0.5rem 0.5rem;
     }
-    .btn.register {
+    .btn.register, .btn.favourite {
         padding: 0.5rem 0.8rem;
     }
 }
