--- a/public/css/Shopping_Cart.css
+++ b/public/css/Shopping_Cart.css
@@ -121,6 +121,16 @@ body {
     opacity: 0.9;
 }
 
+.btn.favourite {
+    background-color: #d793d5;
+    color: #FFFFFF;
+    padding: 0.5rem 0.8rem;
+}
+
+.btn.favourite:hover {
+    opacity: 0.9;
+}
+
 /* --- Shopping Cart Container --- */
 .shopping_cart_container {
     max-width: 1080px;
@@ -349,7 +359,7 @@ footer {
     .btn.sign_in {
         padding: 0.5rem 0.5rem;
     }
-    .btn.register {
+    .btn.register, .btn.favourite {
         padding: 0.5rem 0.8rem;
     }
 }
