--- a/public/css/Main_Page.css
+++ b/public/css/Main_Page.css
@@ -22,7 +22,7 @@ body {
     flex: 1;
     display: flex;
     justify-content: center;
-    padding-left: 20.8rem;
+    padding-left: 10.75rem;
     align-items: center;
     gap: 0.94rem;
 }
@@ -63,7 +63,8 @@ body {
     font-weight: 800;
     text-decoration: none;
 
-    padding-right: 161px;
+    display: inline;
+    padding: 0;
 }
 
 .link_type.sales:hover {
