--- a/public/css/Product_Detail.css
+++ b/public/css/Product_Detail.css
@@ -210,14 +210,35 @@ body {
 }
 
 .price {
+    margin-top: 30px;
     font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+.price_wrapper {
+    display: flex;
+    align-items: center;
+    gap: 0.6rem;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+.original_price {
+    color: #333;
+    font-size: 24px;
+    text-decoration: line-through;
     font-weight: bold;
 }
 
+.sale_price {
+    color: #ba3b3b;
+    font-size: 28px;
+    font-weight: bold;
+}
 .category {
     color: gray;
+    margin-top: 7px;
 }
-
 .button-container {
     display: flex;
     flex-direction: column;
@@ -244,9 +265,10 @@ body {
     color: black;
     font-size: 20px;
     display: inline-flex;
-    margin: 0;
+    /* margin: 0; */
     align-items: center;
     gap: 1px;
+    margin-bottom: 10px;
 }
 .favorite:hover {
     cursor: pointer;
