--- a/public/css/Shopping_Cart.css
+++ b/public/css/Shopping_Cart.css
@@ -136,6 +136,7 @@ body {
     max-width: 1080px;
     margin: 2rem auto;
     padding: 0 1rem;
+    height: 760px;
 }
 .cart_title {
     margin-top: 2.5rem;
