--- a/public/css/Shopping_Cart.css
+++ b/public/css/Shopping_Cart.css
@@ -136,7 +136,6 @@ body {
     max-width: 1080px;
     margin: 2rem auto;
     padding: 0 1rem;
-    height: 760px;
 }
 .cart_title {
     margin-top: 2.5rem;
@@ -296,6 +295,10 @@ footer {
     background-color: #b7b7b7;
     padding: 1rem 0;
     color: #333;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 .bottom_panel {
     display: flex;
