--- a/public/css/Shopping_Cart.css
+++ b/public/css/Shopping_Cart.css
@@ -299,6 +299,7 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
+    margin-top: 50px;
 }
 .bottom_panel {
     display: flex;
@@ -373,5 +374,4 @@ footer {
         font-size: 10px;
     }
 }
-
 
