--- a/public/css/Product_Page.css
+++ b/public/css/Product_Page.css
@@ -360,12 +360,19 @@ body {
     border-radius: 5px 5px 0 0;
 }
 
-.heart {
+.heart-btn {
     position: absolute;
     right: 11px;
     cursor: pointer;
     font-size: 30px;
+    line-height: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
 }
+
 .image {
     position: relative;
     width: 100%;
