--- a/public/css/Shopping_Cart.css
+++ b/public/css/Shopping_Cart.css
@@ -8,6 +8,11 @@
 body {
     font-family: Arial, sans-serif;
     color: #333;
+    display: block;
+}
+
+.content {
+    min-height: calc(100vh - 145px);
 }
 
 /* --- Blue Panel --- */
@@ -295,9 +300,8 @@ footer {
     background-color: #b7b7b7;
     padding: 1rem 0;
     color: #333;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    position: relative;
+
     width: 100%;
     margin-top: 50px;
 }
@@ -375,3 +379,8 @@ footer {
     }
 }
 
+@media (max-width: 864px) {
+    .content {
+        min-height: calc(100vh - 80px);
+    }
+}
