Updated Main Page, fixed input, aded prelinks

--- a/public/css/Product_Detail.css
+++ b/public/css/Product_Detail.css
@@ -317,6 +317,14 @@ body {
     border-radius: 6px;
     font-size: 16px;
 }
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
 .buy {
     display: block;
     width: 100%;
