--- a/public/css/Payment.css
+++ b/public/css/Payment.css
@@ -216,6 +216,13 @@ footer {
 .form_field input::placeholder {
     color: #aaa;
 }
+.total_summary {
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #333;
+}
 .buy_btn {
     width: 100%;
     padding: 1rem;
