More fixes, addons and filtrations

--- a/public/css/Main_Page.css
+++ b/public/css/Main_Page.css
@@ -272,6 +272,7 @@ body {
 
 /* --- Choosing sections --- */
 .clickable_section{
+    display: inline-block;
     text-decoration: none;
     cursor: pointer;
 }
