--- a/public/css/Add_New_Product.css
+++ b/public/css/Add_New_Product.css
@@ -128,6 +128,13 @@ main {
 .photo_section2:hover::after {
     display: block;
 }
+.photo_section_wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 20px;
+    align-items: center;
+}
 .product_form {
     display: flex;
     flex-direction: column;
@@ -136,15 +143,49 @@ main {
     flex: 1;
 }
 .product_form input,
-.product_form textarea {
+.product_form textarea,
+.product_form select {
     padding: 0.75rem;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f5f5f5;
     font-size: 1rem;
     resize: none;
+    color: #333;
+    font-family: Arial, sans-serif;
+}
+.product_form select,
+.product_form select option {
+    color: #777;
+    font-family: Arial, sans-serif;
+}
+.product_form select:valid {
+    color: #333;
+}
+::placeholder {
+    color: #777;
+    font-family: Arial, sans-serif;
+}
+select {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1rem;
+    width: 100%;
+    box-sizing: border-box;
+}
+.discount_input {
+    display: none;
+    margin-top: 0;
+}
+.discount_input input {
+    height: 40px;
+    padding: 0 0.75rem;
+    border-radius: 12px;
+    font-size: 1rem;
 }
 .sale_part {
+    margin-top: 1.2rem;
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -173,10 +214,16 @@ main {
     background-color: #a4e5b3;
 }
 .sale_no {
-    background-color: #ff7891;
+    background-color: #f8637e;
 }
 .sale_no:hover {
     background-color: #f64a77;
+}
+.sale_yes.active {
+    background-color: #96e3a4;
+}
+.sale_no.active {
+    background-color: #f04d6b;
 }
 .add_btn {
     background-color: #ff5f7e;
@@ -188,10 +235,12 @@ main {
     border-radius: 12px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
-    align-self: flex-start;
+    align-self: center;
     min-width: 300px;
+    width: 100%;
+    max-width: 1000px;
 }
 .add_btn:hover {
     background-color: #f64a77;
