--- a/public/css/Admin_Page.css
+++ b/public/css/Admin_Page.css
@@ -54,10 +54,12 @@ body {
     text-align: center;
     padding: 50px;
     flex: 1;
+    margin-bottom: 400px;
 }
 
 h1 {
     font-size: 2.5em;
+    margin-top: 50px;
     margin-bottom: 45px;
 }
 
