--- a/public/css/Edit_Product_Page.css
+++ b/public/css/Edit_Product_Page.css
@@ -40,8 +40,8 @@ body {
 /* --- Main --- */
 .container {
     text-align: center;
-    margin: 50px auto;
-    padding: 50px;
+    margin: 1px auto;
+    padding: 15px;
 }
 h1 {
     font-size: 2.5em;
@@ -60,6 +60,7 @@ h1 {
     font-size: 18px;
     flex-direction: column;
     gap: 10px;
+    margin-bottom: 35px;
 }
 .h1{
     margin-bottom: 20px;
@@ -82,6 +83,25 @@ h1 {
 .remove_btn:hover {
     background-color: #da7070;
     border: 2px solid #da7070;
+}
+.search_part {
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0 4rem 0;
+    gap: 0.5rem;
+}
+.searcher {
+    padding: 0.5rem 1rem;
+    border-radius: 20px;
+    border: 1px solid #ccc;
+    width: 250px;
+    outline: none;
+}
+.search_btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
 }
 .edit_btn {
     background-color: #f0f0f0;
