--- a/public/css/Edit_Product_Page.css
+++ b/public/css/Edit_Product_Page.css
@@ -122,6 +122,40 @@ h1 {
     background-color: #e0e0e0;
     border: 2px solid #e0e0e0;
 }
+.paging_part {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    padding: 1.5rem 0 1rem;
+}
+
+.page_circle {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #ddd;
+    border: none;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+    text-decoration: none;
+    color: #000;
+}
+
+.page_circle:hover {
+    background-color: #aaa;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+}
+
+.page_circle.active {
+    background-color: #333;
+    color: white;
+}
 
 /* --- Footer --- */
 footer {
