--- a/public/css/Product_Page.css
+++ b/public/css/Product_Page.css
@@ -222,7 +222,13 @@ body {
     font-size: 16px;
     padding-left: 5px;
 }
-
+.no_results {
+    text-align: center;
+    font-size: 1.2rem;
+    color: #888;
+    margin-top: 20px;
+    font-weight: bold;
+}
 .sort-options {
     margin-top: 17px;
     display: flex;
