--- a/public/css/Add_New_Product.css
+++ b/public/css/Add_New_Product.css
@@ -90,9 +90,12 @@ main {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
-    position: absolute;
+    position: static;
     top: 0;
     left: 0;
+}
+.photo_section.has-image {
+    background-color: white;
 }
 .photo_section2 {
     width: 300px;
@@ -134,6 +137,7 @@ main {
     gap: 20px;
     margin-bottom: 20px;
     align-items: center;
+    justify-content: center;
 }
 .product_form {
     display: flex;
