--- a/public/css/Product_Page.css
+++ b/public/css/Product_Page.css
@@ -461,9 +461,20 @@ body {
     position: relative;
     width: 100%;
     height: 150px;
-    background: #ddd;
+    background: #fcfcfc;
     margin-bottom: 10px;
     border-radius: 5px;
+}
+.img-fallback {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #757575;
+    font-weight: bold;
+    text-align: center;
+    padding: 5px;
+    font-size: 14px;
 }
 .filter-panel h4.rating-title, h4.product-type_class, h4.price_class {
     margin-top: 17px;
