--- a/public/css/Add_New_Product.css
+++ b/public/css/Add_New_Product.css
@@ -261,6 +261,38 @@ select {
     background-color: #f64a77;
 }
 
+.button-row {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    margin-top: 1rem;
+    flex-wrap: wrap;
+}
+
+.inline-form {
+    display: inline;
+}
+
+.delete_btn {
+    background-color: #aaa;
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
+    padding: 0.8rem 2rem;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    min-width: 300px;
+    width: 100%;
+    max-width: 1000px;
+}
+
+.delete_btn:hover {
+    background-color: #888;
+}
+
+
 /* --- Footer --- */
 footer {
     background-color: #b7b7b7;
