Fixed Admin Page Add Product footer

--- a/public/css/Add_New_Product.css
+++ b/public/css/Add_New_Product.css
@@ -34,6 +34,10 @@ main {
     flex: 1;
 }
 
+.content {
+    min-height: calc(100vh - 145px);
+}
+
 /* --- Blue Panel --- */
 .blue_panel {
     background-color: #a0bad8;
