--- a/public/css/Add_New_Product.css
+++ b/public/css/Add_New_Product.css
@@ -174,6 +174,10 @@ main {
     color: #777;
 }
 .product_form select:valid {
+    color: inherit;
+}
+
+.product_form select:valid:not([value=""]) {
     color: #000;
 }
 
