--- a/public/css/Main_Page.css
+++ b/public/css/Main_Page.css
@@ -136,6 +136,7 @@ body {
     background-color: #cdcdcd;
     color: #000;
     padding: 0.5rem 1.15rem;
+    margin-right: 3px;
 }
 .btn.register:hover {
     opacity: 0.9;
