--- a/public/css/Product_Page.css
+++ b/public/css/Product_Page.css
@@ -362,7 +362,6 @@ body {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* tu som mal auto-fit */
     gap: 20px;
 }
-
 .product {
     background: white;
     padding: 15px;
@@ -372,8 +371,8 @@ body {
     margin-bottom: 10px;
     cursor: pointer;
     position: relative;
-    flex: 1 1 250px; /* toto nie */
-    max-width: 280px; /* iba toto som mal povodne */
+    flex: 1 1 250px;
+    max-width: 280px;
 }
 
 .product_name {
@@ -391,6 +390,7 @@ body {
     color: inherit;
     display: block;
 }
+
 .product_img {
     width: 100%;
     height: 100%;
