--- a/public/css/Payment_Succeeded_Page.css
+++ b/public/css/Payment_Succeeded_Page.css
@@ -119,6 +119,7 @@ footer {
     justify-content: center;
     gap: 8rem;
     align-items: flex-start;
+    margin-right: 12px;
 }
 .contacts {
     display: flex;
