--- a/public/css/Edit_Product_Page.css
+++ b/public/css/Edit_Product_Page.css
@@ -7,6 +7,9 @@
 body {
     font-family: Arial, sans-serif;
     color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 /* --- Blue Panel --- */
@@ -42,6 +45,7 @@ body {
     text-align: center;
     margin: 1px auto;
     padding: 15px;
+    flex: 1;
 }
 h1 {
     font-size: 2.5em;
