--- a/public/css/Delivery.css
+++ b/public/css/Delivery.css
@@ -96,6 +96,10 @@ body {
 .btn.sign_in:hover {
     opacity: 0.9;
 }
+.btn.real {
+    margin-left: 23px;
+}
+
 .btn.register {
     background-color: #cdcdcd;
     color: #000;
