--- a/public/css/Product_Page.css
+++ b/public/css/Product_Page.css
@@ -490,6 +490,17 @@ body {
     gap: 5px;
     margin: 10px 0;
 }
+.product-type label:hover,
+.manufacturer-type label:hover,
+.format-type label:hover {
+    cursor: pointer;
+}
+.product-type input[type="checkbox"],
+.manufacturer-type input[type="checkbox"],
+.format-type input[type="checkbox"] {
+    cursor: pointer;
+}
+
 
 .rating-label {
     position: relative;
