--- a/public/css/Main_Page.css
+++ b/public/css/Main_Page.css
@@ -249,6 +249,12 @@ body {
     align-items: center;
     justify-content: center;
 }
+.scroller_items .item img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    display: block;
+}
 .search_bar {
     display: flex;
     align-items: center;
