--- a/public/css/Favourites.css
+++ b/public/css/Favourites.css
@@ -279,3 +279,85 @@ footer {
 .information_text a:hover {
     color: #666;
 }
+
+@media (max-width: 860px) {
+    .main_window h1 {
+        font-size: 2.5rem;
+    }
+    .information_text {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        gap: 0.5rem;
+        align-items: flex-start;
+        font-size: 12px;
+    }
+    .blue_panel .types {
+        padding-left: 0.1rem;
+        font-size: 15px;
+        gap: 0.1rem;
+    }
+    .shopping_cart_btn {
+        background-color: #561c88;
+        padding: 0.3rem 0.5rem;
+    }
+    .btn.sign_in {
+        padding: 0.5rem 0.5rem;
+    }
+    .btn.register, .btn.favourite {
+        padding: 0.5rem 0.8rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .favourite-container {
+        padding: 1rem;
+    }
+
+    .favourite-wrapper {
+        padding: 20px;
+        min-width: unset;
+        width: 100%;
+    }
+
+    .blue_panel {
+        flex-direction: column;
+        padding: 0.5rem;
+        gap: 0.5rem;
+    }
+
+    .blue_panel .types {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-left: 0;
+        margin-right: 0;
+        gap: 0.4rem;
+        font-size: 14px;
+    }
+
+    .shopping_cart_btn {
+        padding: 0.4rem 1rem;
+        font-size: 14px;
+    }
+
+    .footer,
+    footer {
+        width: 100%;
+        padding: 0.5rem;
+        font-size: 14px;
+    }
+
+    .bottom_panel {
+        flex-direction: column;
+        gap: 1rem;
+        text-align: center;
+    }
+
+    .information_text {
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        font-size: 12px;
+    }
+}
